--- a/404.html
+++ b/404.html
@@ -45,6 +45,14 @@
 
     <title>404 Page not found</title>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+       (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-7489937575773404",
+        enable_page_level_ads: true
+      });
+    </script>
+
     <link rel="icon" href="favicon.ico">
     
 
